[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/player/Idle.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/Duck.png" type="Texture" id=2]
[ext_resource path="res://src/ui/InkQuickSwitch.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/ink_move_icons/selection_box.png" type="Texture" id=4]
[ext_resource path="res://src/entities/Pause.gd" type="Script" id=5]
[ext_resource path="res://src/entities/Player2D.gd" type="Script" id=6]
[ext_resource path="res://fonts/8-BIT WONDER.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://src/entities/Resume.gd" type="Script" id=8]
[ext_resource path="res://src/entities/Quit.gd" type="Script" id=9]
[ext_resource path="res://sprites/ink_move_icons/locked.png" type="Texture" id=10]
[ext_resource path="res://src/entities/InkMenu.gd" type="Script" id=11]
[ext_resource path="res://src/entities/Selector.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 64 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
} ]

[node name="Player2D" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="HudLayer" type="CanvasLayer" parent="Camera"]

[node name="Hud" type="MarginContainer" parent="Camera/HudLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InkQuickSwitch" parent="Camera/HudLayer/Hud" instance=ExtResource( 3 )]
margin_right = 104.0
margin_bottom = 40.0

[node name="SelectionBox" type="TextureRect" parent="Camera/HudLayer"]
margin_left = 36.0
margin_right = 104.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="PauseLayer" type="CanvasLayer" parent="Camera"]

[node name="Pause" type="Control" parent="Camera/PauseLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 30.0
margin_right = -50.0
margin_bottom = -30.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Camera/PauseLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseVBox" type="VBoxContainer" parent="Camera/PauseLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -99.0
margin_right = 80.0
margin_bottom = 99.0
custom_constants/separation = 90
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/PauseLayer/Pause/PauseVBox"]
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "pause"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVBox" type="VBoxContainer" parent="Camera/PauseLayer/Pause/PauseVBox"]
margin_top = 122.0
margin_right = 160.0
margin_bottom = 196.0
custom_constants/separation = 30

[node name="Resume" type="Button" parent="Camera/PauseLayer/Pause/PauseVBox/ButtonVBox"]
margin_right = 160.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "resume"
script = ExtResource( 8 )

[node name="Quit" type="Button" parent="Camera/PauseLayer/Pause/PauseVBox/ButtonVBox"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
text = "quit"
script = ExtResource( 9 )

[node name="InkMenuLayer" type="CanvasLayer" parent="Camera"]

[node name="InkMenu" type="Control" parent="Camera/InkMenuLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 30.0
margin_right = -50.0
margin_bottom = -30.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Camera/InkMenuLayer/InkMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InkMenuVBox" type="VBoxContainer" parent="Camera/InkMenuLayer/InkMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.413
margin_top = -107.713
margin_right = 1.5874
margin_bottom = 12.2866
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox"]
margin_right = 203.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Ink moves"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox"]
margin_top = 31.0
margin_right = 203.0
margin_bottom = 105.0
custom_constants/separation = 10

[node name="Row1" type="HBoxContainer" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows"]
margin_right = 203.0
margin_bottom = 32.0
custom_constants/separation = 25

[node name="Icon1" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row1"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Icon2" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row1"]
margin_left = 57.0
margin_right = 89.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Icon3" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row1"]
margin_left = 114.0
margin_right = 146.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Icon4" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row1"]
margin_left = 171.0
margin_right = 203.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Row2" type="HBoxContainer" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows"]
margin_top = 42.0
margin_right = 203.0
margin_bottom = 74.0
custom_constants/separation = 25

[node name="Icon5" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row2"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Icon6" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row2"]
margin_left = 57.0
margin_right = 89.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Icon7" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row2"]
margin_left = 114.0
margin_right = 146.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Icon8" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu/InkMenuVBox/Rows/Row2"]
margin_left = 171.0
margin_right = 203.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Selector" type="TextureRect" parent="Camera/InkMenuLayer/InkMenu"]
margin_left = 3.0
margin_top = 67.0
margin_right = 35.0
margin_bottom = 99.0
rect_scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 4 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationManager" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="DodgeTimer" type="Timer" parent="."]
one_shot = true
